# ExVectrLibTemplate

./: CMakeLists.txt  README.md
ToDo/: debug_io.h  high_pass_filter.h  low_pass_filter.h
ToDo/src/: debug_io.cpp  value_error.cpp
include/: ExVectrLibTemplate.hpp  VectrLibTemplate.hpp
include/VectrLibTemplate/: your_header_files_here.hpp
src/: your_source_files_here.cpp
